# scratchy.rs

./: .envrc  .gitignore  .lsp.json  AGENTS.md  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml
.cargo/: config.toml
.claude/: settings.json
scripts/: debug_daemon.py  nod_head.py
src/: actuator_io.rs  control.rs  lib.rs  main.rs
