[package]
name = "reachy"
version = "0.1.0"
edition = "2024"

[dependencies]
mujoco-rs = { version = "4.0.1", features = ["viewer"], optional = true }
spin_sleep = "1.3.3"

[features]
default = ["sim"]        # laptop dev "just works"; CM4 build uses --no-default-features
sim = ["dep:mujoco-rs"]
hardware = []            # add the real servo driver crate here later

[[bin]]
name = "sim"
required-features = ["sim"]

[[bin]]
name = "hw"
required-features = ["hardware"]

# Workaround for mujoco-rs#100 (macOS viewer fails with
# "OpenGL ARB_framebuffer_object required"). Upstream glutin PR #1740 makes
# the macOS CGL backend pick a context that exposes modern extensions.
# Drop this once that PR is merged and released.
[patch.crates-io]
glutin = { git = "https://github.com/kalzoo/glutin", branch = "try-init-pixel-format-without-profile" }
