[package]
name = "scratchy"
version = "0.1.0"
edition = "2024"

[dependencies]
mujoco-rs = { version = "4.0.1", features = ["viewer"], optional = true }

ctrlc = { version = "3.5.2", optional = true }
rustypot = { version = "1.5.0", optional = true }
serialport = { version = "4.7", optional = true, default-features = false }
spin_sleep = "1.3.3"

[features]
default = ["sim", "hardware"]
sim = ["dep:mujoco-rs"]
hardware = ["dep:rustypot", "dep:serialport", "dep:ctrlc"]

[[bin]]
name = "sim"
required-features = ["sim"]

[[bin]]
name = "hw"
required-features = ["hardware"]

# Workaround for mujoco-rs#100 (macOS viewer fails with
# "OpenGL ARB_framebuffer_object required"). Upstream glutin PR #1740 makes
# the macOS CGL backend pick a context that exposes modern extensions.
# Drop this once that PR is merged and released.
[patch.crates-io]
glutin = { git = "https://github.com/kalzoo/glutin", branch = "try-init-pixel-format-without-profile" }
